[package]
name = "mls-rs-provider-web"
version = "0.1.0"
edition = "2021"
description = "LocalStorage based StorageProvider for supporting mls-rs in a browser"
homepage = "https://github.com/awslabs/mls-rs"
repository = "https://github.com/awslabs/mls-rs"
keywords = ["mls", "mls-rs"]
license = "Apache-2.0 OR MIT"

[dependencies]
mls-rs-core = { path = "../mls-rs-core", default-features = false, features = ["std"], version = "0.19.0" }
thiserror = "1.0.40"
zeroize = { version = "1", features = ["zeroize_derive"] }
maybe-async = "0.2.10"
async-trait = "0.1.74"
web-sys = { version = "0.3.64", features = ["Window", "Storage"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
serde_json = "1.0.127"
serde = "1.0.209"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mls_build_async)'] }
